# libtorch-faceRecognition-mtcnn

./: CMakeLists.txt  README.md  start.md
convert/: model2libtorch.py
include/: MTCNN.h  dlib_face_recognition.h  mytorch.h
script/: face_recognition_knn.py
src/: MTCNN.cpp  main.cpp  mytorch.cpp
test/: Makefile  test.cpp
